pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constExplicitThis.pkl
open class A {
  a = 1
}

class B extends A {
  const b = this.a
}

b: B
